2007-07-15  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.2 released.

	* THANKS: Added people who reported bugs or sent patches since
	1.8.1.  Converted to UTF-8.

	* README: Updated version number.

	* GUILE-VERSION (GUILE_MICRO_VERSION): Set to 2.
	(LIBGUILE_INTERFACE_CURRENT): Incremented due to new symbols.
	(LIBGUILE_INTERFACE_REVISION): Set to 0.
	(LIBGUILE_INTERFACE_AGE): Incremented.
	(LIBGUILE_SRFI_SRFI_60_INTERFACE_REVISION): Incremented due to
	bug fixes.

2007-07-11  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention GOOPS `method-more-specific?' bug fix.

2007-07-09  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention SRFI-19 `date->julian-day' bug fix.

2007-06-26  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention fixed memory leaks.

2007-06-13  Ludovic Courtès  <ludo@chbouib.org>

	* NEWS: Mention top-level define incompatible change.

2007-06-12  Ludovic Courtès  <ludo@chbouib.org>

	* NEWS: Mention `inet-ntop' bug fix.

2007-05-09  Ludovic Courtès  <ludo@chbouib.org>

	* NEWS: Mention SRFI-19 `time-process' bug fix.

2007-02-20  Neil Jerram  <neil@ossau.uklinux.net>

	* config.rpath (Module): New (from gettext package).

	* INSTALL: New upstream version.

	* ABOUT-NLS: New upstream version.

2007-01-28  Neil Jerram  <neil@ossau.uklinux.net>

	IA64 HP-UX patch from Hrvoje Nikšić.  (Thanks!)
	
	* configure.in: New check for uca lib (needed for IA64 on HP-UX).

2007-01-23  Kevin Ryde  <user42@zip.com.au>

	* configure.in (isinf, isnan): Use a volatile global to stop gcc
	optimizing out the test.  In particular this fixes solaris where there
	isn't an isinf or isnan (though gcc still optimizes as if there is).
	Reported by Hugh Sasse.
	(AC_C_VOLATILE): New.

2007-01-22  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_INIT): Don't use "echo -n", it's not portable and
	in particular fails on solaris (resulting in literal "-n"s going into
	the output, making the resulting configure unusable).  Reported by
	Hugh Sasse.
